Changelog
=========

7.5-dev - (unreleased)
----------------------
* Feature: Assigned versionId to PloneGazette Newsletter and NewsletterTheme through
  upgrade step.
  [tiberich #16776]
* Bug: Removed Arabic from language list in top menu.
  [prospchr fixes #16755]
* Upgrade step:
   - Restart memcached on production.


7.4 - (2013-09-06)
------------------

7.3 - (2013-08-28)
------------------
* Feature: Added ManagementPlan field to all SOER 2015 Content-Types
  [voineali refs #14900]
* Bug fix: fixed SKOS view after upgrade to Plone 4.3
  [ichimdav #16291]

7.2 - (2013-08-09)
------------------
* Change: removed upgrade step for cleanup of tags from egg 6.6 for this
  upgrade to Plone 4.3
  [ichimdav refs #14323]
* Bug fix: fixed forward and backward after changes done in 7.1
  [ichimdav refs #14863]
* Change: Remove dependency to cornerstone.feed.zope
  [szabozo0 refs #14323]

7.1 - (2013-08-07)
------------------
* Bugfix: no longer compute possible relation for every forward or backward
  relation when retriving the auto relation of non canonical objects
  [ichimdav refs #14863]
* Feature: added a plone.app.contentrules action to enable/disable
  discussions based on rules
  [tiberich #14858]
* Feature: Plone 4.3 compatibility
    - removed 3rd party syndication products (bda.feed, Products.fatsyndication)
    - removed eea.rdfrepository
    - added custom RSS2 feed using standard Plone 4.3 syndication framework
    - [batradav refs #14323]

7.0 - (2013-07-25)
------------------
* Feature: removed p4a.video dependency
  [ichimdav #15234]
* WIP: added a plone.app.contentrules action to enable/disable
  discussions based on rules
  [tiberich #14858]
* Bug fix: added adapter registration implementing IFeed for ICollection
  types, fixes /RSS2 view for feeds
  [tiberich #14915]
* Cleanup: Deprecated p4a.subtyper and remove hard dependency on it (
  is optional now and it will be removed in a later version of this pacakge)
  [voineali refs #15234]